// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu demo -- item-disabled 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  overflow: auto;
  line-height: 32px;
  font-size: 12px;
  max-width: 360px;
  min-width: 64px;
  padding: 4px 0px;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
  border: none;
  color: #0a1633;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  cursor: pointer;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-selectall-wrap:hover,
.c0 .uc-fe-menu-popup-title:hover,
.c0 .uc-fe-menu-collapse-title:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  padding: 0 8px;
  margin: 0 8px;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled {
  color: #cccccc;
  cursor: not-allowed;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled:hover,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled:hover {
  background: unset;
}

.c0 .uc-fe-menu-item-hidden {
  display: none;
}

.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  position: relative;
  padding: 0px 40px 0px 8px;
}

.c0 .uc-fe-menu-popup-title.uc-fe-menu-selected,
.c0 .uc-fe-menu-collapse-title.uc-fe-menu-selected {
  color: #3860f4;
}

.c0.uc-fe-menu-single .uc-fe-menu-item.uc-fe-menu-selected {
  color: #3860f4;
}

.c0 .uc-fe-menu-collapse-wrap::after,
.c0 .uc-fe-menu-collapse-wrap::before {
  content: '';
  display: block;
  margin: 4px 8px;
  height: 1px;
  background: #d2d6ea;
}

.c0 .uc-fe-menu-first.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-collapse-wrap+.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-last.uc-fe-menu-collapse-wrap::after {
  display: none;
}

.c0 .uc-fe-menu-checkbox {
  width: 100%;
}

.c0.uc-fe-block {
  min-width: unset;
  max-width: unset;
  width: 100%;
  height: 100%;
  box-shadow: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-single c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          Menu 1
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 2 - disabled
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 3
        </div>
        <div
          class="uc-fe-menu-item uc-fe-menu-last"
        >
          Menu 4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu 1`] = `
.c21 {
  vertical-align: baseline;
}

.c18 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c18:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c20 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c19 {
  display: inline-block;
  box-sizing: border-box;
  overflow: auto;
  line-height: 32px;
  font-size: 12px;
  max-width: 360px;
  min-width: 64px;
  padding: 4px 0px;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
  border: none;
  color: #0a1633;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c19 .uc-fe-menu-item,
.c19 .uc-fe-menu-selectall-wrap,
.c19 .uc-fe-menu-popup-title,
.c19 .uc-fe-menu-collapse-title {
  cursor: pointer;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c19 .uc-fe-menu-item:hover,
.c19 .uc-fe-menu-selectall-wrap:hover,
.c19 .uc-fe-menu-popup-title:hover,
.c19 .uc-fe-menu-collapse-title:hover {
  background: #eaeefd;
}

.c19 .uc-fe-menu-item,
.c19 .uc-fe-menu-selectall-wrap,
.c19 .uc-fe-menu-popup-title,
.c19 .uc-fe-menu-collapse-title {
  padding: 0 8px;
  margin: 0 8px;
}

.c19 .uc-fe-menu-item.uc-fe-menu-item-disabled,
.c19 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled {
  color: #cccccc;
  cursor: not-allowed;
}

.c19 .uc-fe-menu-item.uc-fe-menu-item-disabled:hover,
.c19 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled:hover {
  background: unset;
}

.c19 .uc-fe-menu-item-hidden {
  display: none;
}

.c19 .uc-fe-menu-popup-title,
.c19 .uc-fe-menu-collapse-title {
  position: relative;
  padding: 0px 40px 0px 8px;
}

.c19 .uc-fe-menu-popup-title.uc-fe-menu-selected,
.c19 .uc-fe-menu-collapse-title.uc-fe-menu-selected {
  color: #3860f4;
}

.c19.uc-fe-menu-single .uc-fe-menu-item.uc-fe-menu-selected {
  color: #3860f4;
}

.c19 .uc-fe-menu-collapse-wrap::after,
.c19 .uc-fe-menu-collapse-wrap::before {
  content: '';
  display: block;
  margin: 4px 8px;
  height: 1px;
  background: #d2d6ea;
}

.c19 .uc-fe-menu-first.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c19 .uc-fe-menu-collapse-wrap+.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c19 .uc-fe-menu-last.uc-fe-menu-collapse-wrap::after {
  display: none;
}

.c19 .uc-fe-menu-checkbox {
  width: 100%;
}

.c19.uc-fe-block {
  min-width: unset;
  max-width: unset;
  width: 100%;
  height: 100%;
  box-shadow: none;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c9 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c14 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c7 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c7:hover {
  border-color: #3357df;
}

.c7:hover .c13 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c7 .c13 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c7 .c15 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c7 .c8 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c7 .c10,
.c7 .c12 {
  line-height: 16px;
}

.c7 .c10 {
  padding-right: 20px;
}

.c7 .c12 {
  padding-left: 20px;
}

.c7 .c10 {
  display: none;
}

.c17 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c17:hover {
  border-color: #3357df;
}

.c17:hover .c13 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c17 .c13 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c17 .c15 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c17 .c8 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c17 .c10,
.c17 .c12 {
  line-height: 16px;
}

.c17 .c10 {
  padding-right: 20px;
}

.c17 .c12 {
  padding-left: 20px;
}

.c17 .c8 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.c17 .c13 {
  left: 100%;
  margin-left: -19px;
}

.c17 .c15 {
  background: #4cd964;
}

.c17 .c12 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        multiple
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        selectable
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          checked=""
          class="c17"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        showSelectAll
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        block
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        refreshMenuData
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c18"
          type="button"
        >
          refreshMenuData
        </button>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-single c19"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          root-0-item
        </div>
        <div
          class="uc-fe-menu-item"
        >
          root-1-item
        </div>
        <div
          class="uc-fe-menu-item"
        >
          root-2-item
        </div>
        <div
          class=""
        >
          <div
            class="uc-fe-menu-popup-title"
          >
            root-0-subMenu
            <i
              class="uc-fe-icon icon__caret-right c20 c21"
            />
          </div>
        </div>
        <div
          class="uc-fe-menu-last"
        >
          <div
            class="uc-fe-menu-popup-title"
          >
            root-1-subMenu
            <i
              class="uc-fe-icon icon__caret-right c20 c21"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-collapse 1`] = `
.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
}

.c4 {
  vertical-align: baseline;
}

.c1 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  height: 32px;
  line-height: 32px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.c1 > * {
  font-size: 12px;
}

.c1 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 16px;
  height: 16px;
  border: 1px solid #0a1633;
  border-radius: 2px;
  vertical-align: middle;
}

.c1 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c1 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c1:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.c1.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.c1.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.c1.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.c1.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.c1.uc-fe-checkbox-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c1.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: unset;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  overflow: auto;
  line-height: 32px;
  font-size: 12px;
  max-width: 360px;
  min-width: 64px;
  padding: 4px 0px;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
  border: none;
  color: #0a1633;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  cursor: pointer;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-selectall-wrap:hover,
.c0 .uc-fe-menu-popup-title:hover,
.c0 .uc-fe-menu-collapse-title:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  padding: 0 8px;
  margin: 0 8px;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled {
  color: #cccccc;
  cursor: not-allowed;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled:hover,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled:hover {
  background: unset;
}

.c0 .uc-fe-menu-item-hidden {
  display: none;
}

.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  position: relative;
  padding: 0px 40px 0px 8px;
}

.c0 .uc-fe-menu-popup-title.uc-fe-menu-selected,
.c0 .uc-fe-menu-collapse-title.uc-fe-menu-selected {
  color: #3860f4;
}

.c0.uc-fe-menu-single .uc-fe-menu-item.uc-fe-menu-selected {
  color: #3860f4;
}

.c0 .uc-fe-menu-collapse-wrap::after,
.c0 .uc-fe-menu-collapse-wrap::before {
  content: '';
  display: block;
  margin: 4px 8px;
  height: 1px;
  background: #d2d6ea;
}

.c0 .uc-fe-menu-first.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-collapse-wrap+.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-last.uc-fe-menu-collapse-wrap::after {
  display: none;
}

.c0 .uc-fe-menu-checkbox {
  width: 100%;
}

.c0.uc-fe-block {
  min-width: unset;
  max-width: unset;
  width: 100%;
  height: 100%;
  box-shadow: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-multiple c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 1
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 1
              <i
                class="uc-fe-icon icon__up c3 c4"
              />
            </div>
          </div>
          <div
            class=""
            open=""
          >
            <div
              class="uc-fe-menu-selectall-wrap"
            >
              <span
                class="uc-fe-menu-checkbox uc-fe-checkbox c1"
              >
                <span
                  class="uc-fe-checkbox-icon-wrap"
                >
                  <svg
                    class="uc-fe-checkbox-icon c2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                    />
                  </svg>
                </span>
                <span
                  class="uc-fe-checkbox-content"
                >
                  全选
                </span>
              </span>
            </div>
            <div
              class="uc-fe-menu-item uc-fe-menu-first"
            >
              <span
                class="uc-fe-menu-checkbox uc-fe-checkbox c1"
              >
                <span
                  class="uc-fe-checkbox-icon-wrap"
                >
                  <svg
                    class="uc-fe-checkbox-icon c2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                    />
                  </svg>
                </span>
                <span
                  class="uc-fe-checkbox-content"
                >
                  Menu 1
                </span>
              </span>
            </div>
            <div
              class="uc-fe-menu-item"
            >
              <span
                class="uc-fe-menu-checkbox uc-fe-checkbox c1"
              >
                <span
                  class="uc-fe-checkbox-icon-wrap"
                >
                  <svg
                    class="uc-fe-checkbox-icon c2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                    />
                  </svg>
                </span>
                <span
                  class="uc-fe-checkbox-content"
                >
                  Menu 2
                </span>
              </span>
            </div>
            <div
              class="uc-fe-menu-item"
            >
              <span
                class="uc-fe-menu-checkbox uc-fe-checkbox c1"
              >
                <span
                  class="uc-fe-checkbox-icon-wrap"
                >
                  <svg
                    class="uc-fe-checkbox-icon c2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                    />
                  </svg>
                </span>
                <span
                  class="uc-fe-checkbox-content"
                >
                  Menu 3
                </span>
              </span>
            </div>
            <div
              class="uc-fe-menu-item uc-fe-menu-last"
            >
              <span
                class="uc-fe-menu-checkbox uc-fe-checkbox c1"
              >
                <span
                  class="uc-fe-checkbox-icon-wrap"
                >
                  <svg
                    class="uc-fe-checkbox-icon c2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                    />
                  </svg>
                </span>
                <span
                  class="uc-fe-checkbox-content"
                >
                  Menu 4
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 2
              <i
                class="uc-fe-icon icon__up c3 c4"
              />
            </div>
          </div>
          <div
            class=""
            open=""
          >
            <div
              class="uc-fe-menu-selectall-wrap"
            >
              <span
                class="uc-fe-menu-checkbox uc-fe-checkbox c1"
              >
                <span
                  class="uc-fe-checkbox-icon-wrap"
                >
                  <svg
                    class="uc-fe-checkbox-icon c2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                    />
                  </svg>
                </span>
                <span
                  class="uc-fe-checkbox-content"
                >
                  全选
                </span>
              </span>
            </div>
            <div
              class="uc-fe-menu-item uc-fe-menu-first"
            >
              <span
                class="uc-fe-menu-checkbox uc-fe-checkbox c1"
              >
                <span
                  class="uc-fe-checkbox-icon-wrap"
                >
                  <svg
                    class="uc-fe-checkbox-icon c2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                    />
                  </svg>
                </span>
                <span
                  class="uc-fe-checkbox-content"
                >
                  Menu 1
                </span>
              </span>
            </div>
            <div
              class="uc-fe-menu-item"
            >
              <span
                class="uc-fe-menu-checkbox uc-fe-checkbox c1"
              >
                <span
                  class="uc-fe-checkbox-icon-wrap"
                >
                  <svg
                    class="uc-fe-checkbox-icon c2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                    />
                  </svg>
                </span>
                <span
                  class="uc-fe-checkbox-content"
                >
                  Menu 2
                </span>
              </span>
            </div>
            <div
              class="uc-fe-menu-item"
            >
              <span
                class="uc-fe-menu-checkbox uc-fe-checkbox c1"
              >
                <span
                  class="uc-fe-checkbox-icon-wrap"
                >
                  <svg
                    class="uc-fe-checkbox-icon c2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                    />
                  </svg>
                </span>
                <span
                  class="uc-fe-checkbox-content"
                >
                  Menu 3
                </span>
              </span>
            </div>
            <div
              class="uc-fe-menu-item uc-fe-menu-last"
            >
              <span
                class="uc-fe-menu-checkbox uc-fe-checkbox c1"
              >
                <span
                  class="uc-fe-checkbox-icon-wrap"
                >
                  <svg
                    class="uc-fe-checkbox-icon c2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                    />
                  </svg>
                </span>
                <span
                  class="uc-fe-checkbox-content"
                >
                  Menu 4
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap uc-fe-menu-last"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 3
              <i
                class="uc-fe-icon icon__down c3 c4"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-multiple c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 1
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 1
              <i
                class="uc-fe-icon icon__down c3 c4"
              />
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 2
              <i
                class="uc-fe-icon icon__down c3 c4"
              />
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap uc-fe-menu-last"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 3
              <i
                class="uc-fe-icon icon__down c3 c4"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-controlled 1`] = `
.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
}

.c1 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  height: 32px;
  line-height: 32px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.c1 > * {
  font-size: 12px;
}

.c1 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 16px;
  height: 16px;
  border: 1px solid #0a1633;
  border-radius: 2px;
  vertical-align: middle;
}

.c1 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c1 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c1:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.c1.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.c1.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.c1.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.c1.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.c1.uc-fe-checkbox-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c1.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: unset;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  overflow: auto;
  line-height: 32px;
  font-size: 12px;
  max-width: 360px;
  min-width: 64px;
  padding: 4px 0px;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
  border: none;
  color: #0a1633;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  cursor: pointer;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-selectall-wrap:hover,
.c0 .uc-fe-menu-popup-title:hover,
.c0 .uc-fe-menu-collapse-title:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  padding: 0 8px;
  margin: 0 8px;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled {
  color: #cccccc;
  cursor: not-allowed;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled:hover,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled:hover {
  background: unset;
}

.c0 .uc-fe-menu-item-hidden {
  display: none;
}

.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  position: relative;
  padding: 0px 40px 0px 8px;
}

.c0 .uc-fe-menu-popup-title.uc-fe-menu-selected,
.c0 .uc-fe-menu-collapse-title.uc-fe-menu-selected {
  color: #3860f4;
}

.c0.uc-fe-menu-single .uc-fe-menu-item.uc-fe-menu-selected {
  color: #3860f4;
}

.c0 .uc-fe-menu-collapse-wrap::after,
.c0 .uc-fe-menu-collapse-wrap::before {
  content: '';
  display: block;
  margin: 4px 8px;
  height: 1px;
  background: #d2d6ea;
}

.c0 .uc-fe-menu-first.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-collapse-wrap+.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-last.uc-fe-menu-collapse-wrap::after {
  display: none;
}

.c0 .uc-fe-menu-checkbox {
  width: 100%;
}

.c0.uc-fe-block {
  min-width: unset;
  max-width: unset;
  width: 100%;
  height: 100%;
  box-shadow: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-multiple c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-selected uc-fe-menu-first"
          selected=""
        >
          <span
            checked=""
            class="uc-fe-menu-checkbox uc-fe-checkbox uc-fe-checkbox-checked c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 1
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 2
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item uc-fe-menu-selected"
          selected=""
        >
          <span
            checked=""
            class="uc-fe-menu-checkbox uc-fe-checkbox uc-fe-checkbox-checked c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 3
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item uc-fe-menu-last"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 4
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-multiple c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-selected uc-fe-menu-first"
          selected=""
        >
          <span
            checked=""
            class="uc-fe-menu-checkbox uc-fe-checkbox uc-fe-checkbox-checked c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 1
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 2
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item uc-fe-menu-selected"
          selected=""
        >
          <span
            checked=""
            class="uc-fe-menu-checkbox uc-fe-checkbox uc-fe-checkbox-checked c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 3
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item uc-fe-menu-last"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 4
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-multiple 1`] = `
.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
}

.c1 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  height: 32px;
  line-height: 32px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.c1 > * {
  font-size: 12px;
}

.c1 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 16px;
  height: 16px;
  border: 1px solid #0a1633;
  border-radius: 2px;
  vertical-align: middle;
}

.c1 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c1 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c1:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.c1.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.c1.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.c1.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.c1.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.c1.uc-fe-checkbox-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c1.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: unset;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  overflow: auto;
  line-height: 32px;
  font-size: 12px;
  max-width: 360px;
  min-width: 64px;
  padding: 4px 0px;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
  border: none;
  color: #0a1633;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  cursor: pointer;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-selectall-wrap:hover,
.c0 .uc-fe-menu-popup-title:hover,
.c0 .uc-fe-menu-collapse-title:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  padding: 0 8px;
  margin: 0 8px;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled {
  color: #cccccc;
  cursor: not-allowed;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled:hover,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled:hover {
  background: unset;
}

.c0 .uc-fe-menu-item-hidden {
  display: none;
}

.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  position: relative;
  padding: 0px 40px 0px 8px;
}

.c0 .uc-fe-menu-popup-title.uc-fe-menu-selected,
.c0 .uc-fe-menu-collapse-title.uc-fe-menu-selected {
  color: #3860f4;
}

.c0.uc-fe-menu-single .uc-fe-menu-item.uc-fe-menu-selected {
  color: #3860f4;
}

.c0 .uc-fe-menu-collapse-wrap::after,
.c0 .uc-fe-menu-collapse-wrap::before {
  content: '';
  display: block;
  margin: 4px 8px;
  height: 1px;
  background: #d2d6ea;
}

.c0 .uc-fe-menu-first.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-collapse-wrap+.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-last.uc-fe-menu-collapse-wrap::after {
  display: none;
}

.c0 .uc-fe-menu-checkbox {
  width: 100%;
}

.c0.uc-fe-block {
  min-width: unset;
  max-width: unset;
  width: 100%;
  height: 100%;
  box-shadow: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-single c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          Menu 1
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 2
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 3
        </div>
        <div
          class="uc-fe-menu-item uc-fe-menu-last"
        >
          Menu 4
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-multiple c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 1
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 2
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 3
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item uc-fe-menu-last"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 4
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-selectable 1`] = `
.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
}

.c1 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  height: 32px;
  line-height: 32px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.c1 > * {
  font-size: 12px;
}

.c1 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 16px;
  height: 16px;
  border: 1px solid #0a1633;
  border-radius: 2px;
  vertical-align: middle;
}

.c1 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c1 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c1:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.c1.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.c1.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.c1.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.c1.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.c1.uc-fe-checkbox-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c1.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: unset;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  overflow: auto;
  line-height: 32px;
  font-size: 12px;
  max-width: 360px;
  min-width: 64px;
  padding: 4px 0px;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
  border: none;
  color: #0a1633;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  cursor: pointer;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-selectall-wrap:hover,
.c0 .uc-fe-menu-popup-title:hover,
.c0 .uc-fe-menu-collapse-title:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  padding: 0 8px;
  margin: 0 8px;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled {
  color: #cccccc;
  cursor: not-allowed;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled:hover,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled:hover {
  background: unset;
}

.c0 .uc-fe-menu-item-hidden {
  display: none;
}

.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  position: relative;
  padding: 0px 40px 0px 8px;
}

.c0 .uc-fe-menu-popup-title.uc-fe-menu-selected,
.c0 .uc-fe-menu-collapse-title.uc-fe-menu-selected {
  color: #3860f4;
}

.c0.uc-fe-menu-single .uc-fe-menu-item.uc-fe-menu-selected {
  color: #3860f4;
}

.c0 .uc-fe-menu-collapse-wrap::after,
.c0 .uc-fe-menu-collapse-wrap::before {
  content: '';
  display: block;
  margin: 4px 8px;
  height: 1px;
  background: #d2d6ea;
}

.c0 .uc-fe-menu-first.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-collapse-wrap+.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-last.uc-fe-menu-collapse-wrap::after {
  display: none;
}

.c0 .uc-fe-menu-checkbox {
  width: 100%;
}

.c0.uc-fe-block {
  min-width: unset;
  max-width: unset;
  width: 100%;
  height: 100%;
  box-shadow: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-multiple c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 1
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 2
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 3
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item uc-fe-menu-last"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 4
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-multiple c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 1
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 2
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 3
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item uc-fe-menu-last"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 4
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-showSelectAll 1`] = `
.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
}

.c4 {
  vertical-align: baseline;
}

.c1 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  height: 32px;
  line-height: 32px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.c1 > * {
  font-size: 12px;
}

.c1 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 16px;
  height: 16px;
  border: 1px solid #0a1633;
  border-radius: 2px;
  vertical-align: middle;
}

.c1 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c1 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c1:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.c1.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.c1.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.c1.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.c1.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.c1.uc-fe-checkbox-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c1.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.c1.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: unset;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  overflow: auto;
  line-height: 32px;
  font-size: 12px;
  max-width: 360px;
  min-width: 64px;
  padding: 4px 0px;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
  border: none;
  color: #0a1633;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  cursor: pointer;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-selectall-wrap:hover,
.c0 .uc-fe-menu-popup-title:hover,
.c0 .uc-fe-menu-collapse-title:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  padding: 0 8px;
  margin: 0 8px;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled {
  color: #cccccc;
  cursor: not-allowed;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled:hover,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled:hover {
  background: unset;
}

.c0 .uc-fe-menu-item-hidden {
  display: none;
}

.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  position: relative;
  padding: 0px 40px 0px 8px;
}

.c0 .uc-fe-menu-popup-title.uc-fe-menu-selected,
.c0 .uc-fe-menu-collapse-title.uc-fe-menu-selected {
  color: #3860f4;
}

.c0.uc-fe-menu-single .uc-fe-menu-item.uc-fe-menu-selected {
  color: #3860f4;
}

.c0 .uc-fe-menu-collapse-wrap::after,
.c0 .uc-fe-menu-collapse-wrap::before {
  content: '';
  display: block;
  margin: 4px 8px;
  height: 1px;
  background: #d2d6ea;
}

.c0 .uc-fe-menu-first.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-collapse-wrap+.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-last.uc-fe-menu-collapse-wrap::after {
  display: none;
}

.c0 .uc-fe-menu-checkbox {
  width: 100%;
}

.c0.uc-fe-block {
  min-width: unset;
  max-width: unset;
  width: 100%;
  height: 100%;
  box-shadow: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-multiple c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 1
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 2
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 3
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 4
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 1
              <i
                class="uc-fe-icon icon__down c3 c4"
              />
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 2
              <i
                class="uc-fe-icon icon__down c3 c4"
              />
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-last"
        >
          <div
            class="uc-fe-menu-popup-title"
          >
            SubMenu 3
            <i
              class="uc-fe-icon icon__caret-right c3 c4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-multiple c0"
    >
      <div>
        <div
          class="uc-fe-menu-selectall-wrap"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              全选
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 1
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 2
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 3
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-item"
        >
          <span
            class="uc-fe-menu-checkbox uc-fe-checkbox c1"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon c2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              Menu 4
            </span>
          </span>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 1
              <i
                class="uc-fe-icon icon__down c3 c4"
              />
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 2
              <i
                class="uc-fe-icon icon__down c3 c4"
              />
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-last"
        >
          <div
            class="uc-fe-menu-popup-title"
          >
            SubMenu 3
            <i
              class="uc-fe-icon icon__caret-right c3 c4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-single c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          Menu 1
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 2
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 3
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 4
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 1
              <i
                class="uc-fe-icon icon__down c3 c4"
              />
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 2
              <i
                class="uc-fe-icon icon__down c3 c4"
              />
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-last"
        >
          <div
            class="uc-fe-menu-popup-title"
          >
            SubMenu 3
            <i
              class="uc-fe-icon icon__caret-right c3 c4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-single c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          Menu 1
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 2
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 3
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 4
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 1
              <i
                class="uc-fe-icon icon__down c3 c4"
              />
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 2
              <i
                class="uc-fe-icon icon__down c3 c4"
              />
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-last"
        >
          <div
            class="uc-fe-menu-popup-title"
          >
            SubMenu 3
            <i
              class="uc-fe-icon icon__caret-right c3 c4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- submenu-styleType 1`] = `
.c2 {
  vertical-align: baseline;
}

.c1 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  overflow: auto;
  line-height: 32px;
  font-size: 12px;
  max-width: 360px;
  min-width: 64px;
  padding: 4px 0px;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
  border: none;
  color: #0a1633;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  cursor: pointer;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-selectall-wrap:hover,
.c0 .uc-fe-menu-popup-title:hover,
.c0 .uc-fe-menu-collapse-title:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  padding: 0 8px;
  margin: 0 8px;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled {
  color: #cccccc;
  cursor: not-allowed;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled:hover,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled:hover {
  background: unset;
}

.c0 .uc-fe-menu-item-hidden {
  display: none;
}

.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  position: relative;
  padding: 0px 40px 0px 8px;
}

.c0 .uc-fe-menu-popup-title.uc-fe-menu-selected,
.c0 .uc-fe-menu-collapse-title.uc-fe-menu-selected {
  color: #3860f4;
}

.c0.uc-fe-menu-single .uc-fe-menu-item.uc-fe-menu-selected {
  color: #3860f4;
}

.c0 .uc-fe-menu-collapse-wrap::after,
.c0 .uc-fe-menu-collapse-wrap::before {
  content: '';
  display: block;
  margin: 4px 8px;
  height: 1px;
  background: #d2d6ea;
}

.c0 .uc-fe-menu-first.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-collapse-wrap+.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-last.uc-fe-menu-collapse-wrap::after {
  display: none;
}

.c0 .uc-fe-menu-checkbox {
  width: 100%;
}

.c0.uc-fe-block {
  min-width: unset;
  max-width: unset;
  width: 100%;
  height: 100%;
  box-shadow: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-single c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          Menu 1
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 2
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 3
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 4
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 1 - default
              <i
                class="uc-fe-icon icon__down c1 c2"
              />
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 2 - collapse
              <i
                class="uc-fe-icon icon__down c1 c2"
              />
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-last"
        >
          <div
            class="uc-fe-menu-popup-title"
          >
            SubMenu 3 - popover
            <i
              class="uc-fe-icon icon__caret-right c1 c2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- submenu-title 1`] = `
.c2 {
  vertical-align: baseline;
}

.c3 {
  vertical-align: baseline;
}

.c3.c3.c3 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c1 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  overflow: auto;
  line-height: 32px;
  font-size: 12px;
  max-width: 360px;
  min-width: 64px;
  padding: 4px 0px;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
  border: none;
  color: #0a1633;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  cursor: pointer;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-selectall-wrap:hover,
.c0 .uc-fe-menu-popup-title:hover,
.c0 .uc-fe-menu-collapse-title:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item,
.c0 .uc-fe-menu-selectall-wrap,
.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  padding: 0 8px;
  margin: 0 8px;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled {
  color: #cccccc;
  cursor: not-allowed;
}

.c0 .uc-fe-menu-item.uc-fe-menu-item-disabled:hover,
.c0 .uc-fe-menu-selectall-wrap.uc-fe-menu-item-disabled:hover {
  background: unset;
}

.c0 .uc-fe-menu-item-hidden {
  display: none;
}

.c0 .uc-fe-menu-popup-title,
.c0 .uc-fe-menu-collapse-title {
  position: relative;
  padding: 0px 40px 0px 8px;
}

.c0 .uc-fe-menu-popup-title.uc-fe-menu-selected,
.c0 .uc-fe-menu-collapse-title.uc-fe-menu-selected {
  color: #3860f4;
}

.c0.uc-fe-menu-single .uc-fe-menu-item.uc-fe-menu-selected {
  color: #3860f4;
}

.c0 .uc-fe-menu-collapse-wrap::after,
.c0 .uc-fe-menu-collapse-wrap::before {
  content: '';
  display: block;
  margin: 4px 8px;
  height: 1px;
  background: #d2d6ea;
}

.c0 .uc-fe-menu-first.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-collapse-wrap+.uc-fe-menu-collapse-wrap::before {
  display: none;
}

.c0 .uc-fe-menu-last.uc-fe-menu-collapse-wrap::after {
  display: none;
}

.c0 .uc-fe-menu-checkbox {
  width: 100%;
}

.c0.uc-fe-block {
  min-width: unset;
  max-width: unset;
  width: 100%;
  height: 100%;
  box-shadow: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-menu uc-fe-menu-single c0"
    >
      <div>
        <div
          class="uc-fe-menu-item uc-fe-menu-first"
        >
          Menu 1
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 2
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 3
        </div>
        <div
          class="uc-fe-menu-item"
        >
          Menu 4
        </div>
        <div
          class="uc-fe-menu-collapse-wrap"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              SubMenu 1
              <i
                class="uc-fe-icon icon__down c1 c2"
              />
            </div>
          </div>
        </div>
        <div
          class="uc-fe-menu-collapse-wrap uc-fe-menu-last"
        >
          <div>
            <div
              class="uc-fe-menu-collapse-title"
            >
              <i
                class="uc-fe-icon icon__loading uc-fe-icon-spin c3"
              />
              <i
                class="uc-fe-icon icon__down c1 c2"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
